# sage

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  Dockerfile  LICENSE  README.md  analysis.py  engine.css  index.html  lfq.py  pyproject.toml
.github/workflows/: build.yml  docker.yml  rust.yml
.github/workflows/upload_artifacts/: action.yml
crates/mzidentml/: Cargo.toml
crates/mzidentml/src/: analysis_protocol.rs  data_collection.rs  lib.rs  sequence_collection.rs
crates/sage/: Cargo.toml
crates/sage-cli/: Cargo.toml
crates/sage-cli/src/: input.rs  lib.rs  main.rs  output.rs  runner.rs  telemetry.rs
crates/sage-cli/tests/: integration.rs  integration2.rs
crates/sage-cloudpath/: Cargo.toml
crates/sage-cloudpath/src/: index_parquet.rs  lib.rs  mgf.rs  mzml.rs  mzmlb.rs  parquet.rs  tdf.rs  util.rs
crates/sage-types/: Cargo.toml
crates/sage/src/: database.rs  decoy_free_fdr.rs  enzyme.rs  fasta.rs  fdr.rs  heap.rs  idpicker.rs  ion_series.rs  isotopes.rs  lfq.rs  lfq2.rs  lib.rs  mass.rs  modification.rs  mzml.rs  peptide.rs  protein_grouping.rs  scoring.rs  spectrum.rs  tmt.rs
crates/sage/src/ml/: gauss.rs  kde.rs  linear_discriminant.rs  matrix.rs  mobility_model.rs  mod.rs  qvalue.rs  regression.rs  retention_alignment.rs  retention_model.rs
crates/sage/tests/: integration.rs
docs/: engine.css  engine.js  index.html
figures/benchmark_params/: README.md  comet.open  comet.params  comet.tmt  fragger.open  fragger.params  fragger.tmt  open.json  tmt.json
src/: database.rs  fasta.rs  fdr.rs  ion_series.rs  lfq.rs  lib.rs  mass.rs  mzml.rs  peptide.rs  scoring.rs  spectrum.rs  tmt.rs
src/lda/: bayes.rs  gauss.rs  impls.rs  kde.rs  matrix.rs  mod.rs  qvalue.rs  retention_model.rs
src/ml/: kde.rs  linear_discriminant.rs  mod.rs
tests/: .gitignore  LQSRPAAPPAPGPGQLTLR.json  LQSRPAAPPAPGPGQLTLR.ms2  LQSRPAAPPAPGPGQLTLR.mzML  analyze.py  config-cli.json  config.json  integration.rs  lfq_test.json  pyproject.toml  q_value.py  sps.py
