[tool.poetry]
name = "sage"
version = "0.1.0"
description = ""
authors = ["Michael Lazear <michaellazear92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
numpy = "1.22"
mokapot = "0.8.2"
ppx = "^1.3.0"
matplotlib-venn = "^0.11.7"
pyteomics = "^4.5.4"
spectrum-utils = "^0.3.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
