[package]
name = "mzidentml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sage-core = { path = "../sage" }

serde = { version="1.0", features = ["derive"] }
quick-xml = { version = "0.26", features = ["async-tokio", "serialize"] }
