[package]
name = "sage-cloudpath"
version = "0.15.0-beta.3"
authors = ["Michael Lazear <michaellazear92@gmail.com"]
edition = "2021"
rust-version = "1.62"
description = "A very fast proteomics database search tool"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
async-compression = { version = "0.3", features = ["tokio", "gzip", "zlib"] }
base64 = "0.13"
bytes = "1.0"
futures = "0.3"
log = "0.4.0"
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }
tokio = { version = "1.0", features = ["fs", "io-util", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
quick-xml = { version = "0.31.0", features = ["async-tokio"] }
timsrust = { version = "0.4.2"}
rayon = "1.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
regex = "1.6"
url = { version = "2", features = ["serde"]}

serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"

sage-core = { path = "../sage" }
parquet = { version = "50.0.0", optional = true, default-features = false, features = ["zstd"] }
