[package]
name = "sage-core"
version = "0.6.0"
authors = ["Michael Lazear <michaellazear92@gmail.com"]
edition = "2021"
rust-version = "1.62"
description = "A very fast proteomics database search tool"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.3", features = ["tokio", "gzip", "zlib"] }
base64 = "0.13"
fnv = "1.0"
log = "0.4.0"
tokio = { version = "1.0", features = ["io-util"] }
rayon = "1.5"
regex = "1.6"
serde = { version="1.0", features = ["derive"] }
quick-xml = { version = "0.25", features = ["async-tokio"] }

[dev-dependencies]
serde_json = "1.0"