[package]
name = "sage-core"
version = "0.15.0-beta.1"
authors = ["Michael Lazear <michaellazear92@gmail.com"]
edition = "2021"
rust-version = "1.62"
description = "A very fast proteomics database search tool"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.4.0", features = ["rayon"] }
fnv = "1.0"
itertools = "0.10"
log = "0.4.0"
rayon = "1.5"
regex = "1.6"
serde = { version="1.0", features = ["derive"] }
rustc-hash = "2.1.1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

